<resources>
    <string name="app_name">NewsApp1</string>
    <string name="recent">Recently</string>
    <string name="unknown">Time Unknown</string>
    <string name="no_data_available">No data available</string>
    <string name="no_internet_connection">No Internet connection</string>
    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by oldest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">User\'s settings</string>

    <string name="settings_topic_label">Enter the topic</string>
    <string name="settings_topic_key" translatable="false">q</string>
    <string name="settings_topic_default" translatable="false">food</string>

    <string name="settings_section_label">Enter the section</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">science</string>

    <string name="settings_choose_the_section_label">Choose the section</string>
    <string name="settings_choose_the_section_default" translatable="false">@string/settings_choose_the_section_science_value</string>
    <string name="settings_choose_the_section_key" translatable="false">section</string>

    <string name="settings_choose_the_section_science_value" translatable="false">science</string>
    <string name="settings_choose_the_section_science_label">Science</string>

    <string name="settings_choose_the_section_sport_value" translatable="false">sport</string>
    <string name="settings_choose_the_section_sport_label">Sport</string>

    <string name="settings_choose_the_section_business_value" translatable="false">business</string>
    <string name="settings_choose_the_section_business_label">Business</string>

    <string name="settings_choose_the_section_life_and_style_value" translatable="false">lifeandstyle</string>
    <string name="settings_choose_the_section_life_and_style_label">Life and style</string>

    <string name="settings_choose_the_section_weather_value" translatable="false">weather</string>
    <string name="settings_choose_the_section_weather_label">Weather</string>

    <string name="settings_choose_the_section_fashion_value" translatable="false">fashion</string>
    <string name="settings_choose_the_section_fashion_label">Fashion</string>

    <string name="settings_choose_the_section_football_value" translatable="false">football</string>
    <string name="settings_choose_the_section_football_label">Football</string>


</resources>
