<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_topic_default"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_topic_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_topic_label"
        />


   <ListPreference
        android:defaultValue="@string/settings_choose_the_section_default"
        android:entries="@array/settings_choose_the_section_labels"
        android:entryValues="@array/settings_choose_the_section_values"
        android:key="@string/settings_choose_the_section_key"
        android:title="@string/settings_choose_the_section_label"
       />


    <EditTextPreference
        android:defaultValue="@string/settings_section_default"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_section_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_section_label"
        android:id="@+id/editSection"
        />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"
        />


</PreferenceScreen>